fix time_func.Scan()
support more excel sheet import